# mundo-auto

./: .dockerignore  Dockerfile  README.md  SHOP_ORDER_MANAGEMENT.md  add_columns.py  add_password_reset_columns.py  add_product_columns.py  alembic.ini  check_schema.py  create_tables.py  database_schema_updates.sql  db_init.sql  init_database.py  migrate_password_reset.py  pyproject.toml  remove_product_id.py  test_email_service.py  test_login.py  test_password_recovery.py  test_shop_product_creation.py
app/: main.py
app/api/: health.py
app/core/: security.py
app/crud/: activity_log.py  admin.py  analytics.py  banner.py  cart.py  invoice.py  order.py  product.py  shop.py  shop_product.py  shop_product_image.py  user.py  vehicle.py  vehicle_brand.py  vehicle_model.py
app/db/: create_tables.sql  init_db.py  (+1 more)
migrations/: README.md  README_order_items_migration.md  alembic.ini  env.py  migrate_order_items_to_shop_product.sql  migrate_shop_products_data.sql  migrate_vehicle_to_vehicle_model.sql  remove_product_id_from_order_items.sql  remove_product_id_from_shop_products.sql  rollback_order_items_migration.sql  rollback_shop_products_autonomous.sql  rollback_vehicle_to_vehicle_model.sql  update_shop_products_autonomous.sql
migrations_backup_20251207_073750/: 12ac09e2c526_merge_multiple_heads.py  77e76e489706_add_model_and_manufacturer_year_to_.py  7dd44ee1e9f6_add_model_and_manufacturer_year_columns.py  df8831bac794_merge_multiple_heads.py  fa2909e8c3ff_initial.py  make_shop_products_autonomous.py  modify_product_images.py
static/: test_password_recovery.html
(+64 files in other folders)
